# WebCrawler

./: .gitignore  .ignore  README.md  main.py  pyproject.toml  requirements.txt
core/: commandline_options.py  observer.py  utils.py
core/datastore/: blob_storage.py  database.py  databasemanager.py  schemas.py
core/dns_resolver/: dns_resolver.py
core/duplicate_eliminator/: duplicate_eliminator.py
core/extractor/: extractor.py
core/extractor/content_parser/: parser_result.py  textual_parser.py
core/html_fetcher/: html_fetcher.py
core/html_fetcher/protocol_handlers/: errrors.py  http_handler.py  protocol_handler.py
core/scheduler/: scheduler.py
core/scheduler/models/: url.py  url_frontier.py
core/service_host/: crawler.py  crawler_worker.py  service_host.py
src/webcrawler_arnoldkyeza/: webcrawler.py
src/webcrawler_arnoldkyeza/core/: commandline_options.py  crawler_logging.py  subject.py  utils.py
src/webcrawler_arnoldkyeza/core/datastore/: blob_storage.py  database_manager.py  databasemanager.py
src/webcrawler_arnoldkyeza/core/duplicate_eliminator/: duplicate_eliminator.py
src/webcrawler_arnoldkyeza/core/enums/: url_status_type.py
src/webcrawler_arnoldkyeza/core/extractor/: extractor.py
src/webcrawler_arnoldkyeza/core/html_fetcher/: html_fetcher.py
tests/: conftest.py  test_blob_storage.py  test_content_parser.py  test_crawl_report_printer.py  test_crawler_worker.py  test_database_manager.py  test_duplicate_eliminator.py  test_extractor.py  test_html_fetcher.py  test_scheduler.py  test_service_host.py  test_textual_parser.py
(+10 files in other folders)
